--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="container" style="padding-top: 50px;">
 
-    <h1 style="text-align:center;">Welcome to the Etherparty Block Explorer!</h1>
+    <h1 style="text-align:center;"><img src="styles/snow-white-seven-dwarfs4.jpg" width=100px /> Welcome to the Etherparty Block Explorer! <img src="styles/snow-white-seven-dwarfs4.jpg" width=100px /><br><span style="position: absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; top: 150px;"><small style="padding-top:-20px;"><i>Now with Snow White</i></small></span></h1>
 
     <h4 style="text-align:center; margin-top: 30px;">
       <a href="/#/block/{{blockNum}}">Latest Block: {{blockNum}}</a>
