Adding information to screens

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,22 +6,26 @@
       <a href="/#/block/{{blockNum}}">Latest Block: {{blockNum}}</a>
     </h4>
 
-    <table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
-      <tbody>
-	<tr>
-	  <th>Block #</th>
-	  <th>Tx #</th>
- 	  <th>Size</th>
-	  <th>Timestamp</th>
-	</tr>
-	<tr data-ng-repeat="i in blocks">
-	  <td><a href="/#/block/{{i.number}}">{{i.number}}</a></td>
-	  <td>{{i.transactions.length}}</td>
-	  <td>{{i.size}}</td>
-	  <td>{{i.timestamp}}</td>
-        </tr>
+	<table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
+		<tbody>
+			<tr>
+				<th>Block #</th>
+				<th>Tx #</th>
+				<th>Size</th>
+				<th>from</th>
+				<th>Ct add</th>
+				<th>Timestamp</th>
+			</tr>
+			<tr data-ng-repeat="i in blocks">
+				<td><a href="/#/block/{{i.number}}">{{i.number}}</a></td>
+				<td>{{i.transactions.length}}</td>
+				<td>{{i.size}}</td>
+				<td>{{i.from}}</td>
+				<td>{{i.contractAddress}}</td>
+				<td>{{i.timestamp * 1000 | date : 'hh:mm @ dd/MM/yyyy'}}</td>
+			</tr>
 
-      </tbody>
-    </table>
+		</tbody>
+	</table>
 
 </div>
