--- a/app/views/transactionInfos.html
+++ b/app/views/transactionInfos.html
@@ -53,6 +53,10 @@
                 </td>
             </tr>
             <tr>
+                <td>Contract address</td>
+                <td>{{contractAddress}}</td>
+            </tr>
+            <tr>
                 <td>Gas Used</td>
                 <td>{{gas}}</td>
             </tr>
@@ -72,7 +76,10 @@
                 <td>Data</td>
                 <td>{{input}}</td>
             </tr>
-
+            <tr>
+                <td>Receipt</td>
+                <td>{{receiptData}}</td>
+            </tr>
 
             </tbody>
         </table>
