--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,7 +22,7 @@
 				<td>{{i.size}}</td>
 				<td>{{i.from}}</td>
 				<td>{{i.contractAddress}}</td>
-				<td>{{i.timestamp * 1000 | date : 'hh:mm @ dd/MM/yyyy'}}</td>
+				<td>{{i.timestamp * 1000 | date : 'HH:mm @ dd/MM/yyyy'}}</td>
 			</tr>
 
 		</tbody>
